--- a/Tasks/templates/kalendar/login.html
+++ b/Tasks/templates/kalendar/login.html
@@ -1,11 +1,24 @@
 {% extends 'kalendar/menu.html' %}
 
 {% block body %}
-<form method="post" novalidate>
-	{% csrf_token %}
-	<h2>Login</h2>
-	{{form.as_p}}
-	<input type="submit" value="Login" />
-</form>
+<div class="center">
+	<form method="post" class="card" novalidate>
+		{% csrf_token %}
+	  <h2 class="text-center">Вход в аккаунт</h2>
+	  {% for field in form %}
+			  {{ field.label_tag }} 
+			  {{ field }}
+			  {% if field.errors %}
+				  <small>{{ field.errors|striptags  }}</small> 
+			  {% endif %}
+	  {% endfor %}
+	  
+	  <input type="submit" value="Войти" class="btn btn-primary full-width">
+	  <hr>
+	  <h6 class="text-center">Забыл пароль? <a href="{%url 'password-reset'%}">Восстановить</a></h6>
+	  <h6 class="text-center">Еще на зарагестрирован? <a href="{%url 'register'%}">Присоеденяйся</a></h6>
+  </form>
+</div>
+
 
 {% endblock body %}
