--- a/Tasks/templates/kalendar/index.html
+++ b/Tasks/templates/kalendar/index.html
@@ -10,10 +10,29 @@
 {% block body %}
 <!--  Если не зареган, то не видно!   -->
 {%if request.user.is_authenticated %}
-  		<span>Hi {{ request.user.username | title }}</span>
-{%endif%}
-{%if request.user.is_authenticated %}
-  	
+<div class="center">
+	<form method="POST" enctype="multipart/form-data" class="card">
+		{% csrf_token %} 
+		
+	    {% if user.profile %}
+			<img src="{{user.profile.avatar.url}}" alt="{{ user.username }}" class="avatar"  accept=".jpg,.jpeg,.png"/>
+	    {% endif %}
+	    
+	    <h2 class="text-center">{{ user.username | title }}</h2>
+	    <p class="text-center"><a href="mailto:{{user.email}}">{{user.email}}</a></p>
+   	    <hr>
+		
+            <label for="email">Почта:</label>
+            <input type="email" id="email" name="email" value="{{user.email}}" />
+			
+		
+		<label for="avatar">Аватар:</label>
+		<input type="file" name="avatar" id="avatar">	
+		
+	    <button type="submit" class="btn btn-primary full-width">Обновить профиль</button>
+	
+	</form>
+</div>
 
 
 {%endif%}
