--- a/Tasks/templates/kalendar/menu.html
+++ b/Tasks/templates/kalendar/menu.html
@@ -38,12 +38,12 @@
     ">
         {%if request.user.is_authenticated %}
             <a style="text-decoration:none;
-            color:white;" href="{% url 'logout' %}">Logout</a>
+            color:white;" href="{% url 'logout' %}">Выйти</a>
         {%else%}
             <a style="text-decoration:none;
-            color:white;" href="{% url 'login' %}">Login</a>
+            color:white;" href="{% url 'login' %}">Войти</a>
             <a style="text-decoration:none;
-            color:white;" href="{% url 'register' %}">Register</a>
+            color:white;" href="{% url 'register' %}">Регистрация</a>
         {%endif%}
     </div>
     
