--- a/Tasks/templates/kalendar/menu.html
+++ b/Tasks/templates/kalendar/menu.html
@@ -11,7 +11,7 @@
     <div class="head">
         <ul class="menu-main">
             {% block cur %}
-            <li><a href="{% url 'home' %}">Главная</a></li>
+            <li><a href="{% url 'tasks' %}">Главная</a></li>
             <li><a href="{% url 'tasks' %}">Мои задачи</a></li>
             <li><a href="{% url 'contact' %}">Инфо о разрабе</a></li>
             
