--- a/Tasks/templates/kalendar/register.html
+++ b/Tasks/templates/kalendar/register.html
@@ -10,27 +10,31 @@
 
 
 {% block body %}
-
-<form method="post" novalidate class="form">
-	{% csrf_token %}
-	<h2>Зарегестрироватся</h2>
-		
-	{% for field in form %}
-	<p>
-	 	{{ field.label_tag }} {{ field }}
-	</p>
-	{% endfor %}
-	<input type="submit" value="Зарегестрироватся" />
-</form>
-<p style="font-size: 18px;">Уже есть аккаунт? <a href="{%url 'login' %}">Войти</a></p>
-{% for field in form %}
-	{% if field.errors %}
-		{% for error in field.errors %}
-			<p style="font-size: 14px;">#{{ field.label_tag }} {{ error }}</p>
+	<form method="post" novalidate class="form">
+		{% csrf_token %}
+		<h2>Зарегестрироватся</h2>
+		{% for field in form %}
+		<p>
+			{{ field.label_tag }} {{ field }}
+		</p>
 		{% endfor %}
-	{% endif %}
-{% endfor %}
+		<input type="submit" value="Зарегестрироватся" />
+	</form>
 
+	<p style="font-size: 18px;">Уже есть аккаунт? <a href="{%url 'login' %}">Войти</a></p>
+	{% for field in form %}
+		{% if field.errors %}
+			{% for error in field.errors %}
+				<p style="font-size: 14px;">#{{ field.label_tag }} {{ error }}</p>
+			{% endfor %}
+		{% endif %}
+	{% endfor %}
+
+	{% if messages %}
+        {% for message in messages %}
+            <h6  {% if message.tags %} class="{{ message.tags }}"{% endif %}>*{{ message }}</h6>
+        {% endfor %}
+    {% endif %}
 {% endblock %}
 
 
