--- a/Tasks/templates/kalendar/tasks.html
+++ b/Tasks/templates/kalendar/tasks.html
@@ -13,11 +13,13 @@
   <div>
     
     <h2>{% if id %} Редактировать {% else %} Создать {% endif %} задачу</h2>
-    <form method="post" novalidate>
+    <form method="post" novalidate enctype="multipart/form-data">
       {% csrf_token %}
-      {{ form.tag }}<br>
-      {{ form.to_date }}<br>
-      {{ form.text }}<br>
+      
+      <p>{{ form.tag.label_tag }} {{ form.tag }}<br>
+        {{ form.to_date.label_tag }} {{ form.to_date }}<br>
+        {{ form.text.label_tag }} {{ form.text }}<br>
+        {{ form.img.label_tag }} {{form.img}}<br></p>
       <input type="submit" value="Создать" />
     </form>
   </div>
@@ -25,18 +27,20 @@
     <h1>Мои задачи</h1>
       {%if tasks%}
         {% for task in tasks %}
-          {% if True %}
+          
             <p>-------------------</p>
             <h2>{{ task.tag }}</h2>
+            {% if task.img %}
+            <img style="width: 100px; height: 100px;"   src="{{task.img.url}}" class="img"  accept=".jpg,.jpeg,.png"/>
+            {% endif %}
             <small>Сделать до {{ task.to_date | date:"d M Y" }}</small>
             <p>{{ task.text }}<br>
-              автор {{task.author}}
             </p> 
             <a href="{% url 'task_edit' task.id %}">Редактировать </a>
             <form method="POST">
                 <a href="{% url 'tasks' task.id %}">Удалить</a>
             </form>
-            {% endif %}
+            
           {% endfor %}
         {%else%}
         <p>-------------------</p>
