--- a/Tasks/templates/kalendar/about.html
+++ b/Tasks/templates/kalendar/about.html
@@ -22,7 +22,7 @@
     Институт ИРИТ
     <br>Кафедра КТПП
     <br>
-    <br>ОТЧЕТ
+    <br>ПЛАНЕР
     <br>
     <br>Направление подготовки/специальность: 
     <br>09.03.02 Информационные системы и технологии
