--- a/Tasks/templates/kalendar/password_reset_complete.html
+++ b/Tasks/templates/kalendar/password_reset_complete.html
@@ -1,5 +1,7 @@
 {% extends 'kalendar/menu.html' %}
-
+{% block title %}
+Пароль
+{% endblock %}
 {% block body %}
 <div class="card center">
 	<p>Ваш пароль был успешно изменен. Пожалуйста <a href="{% url 'login' %}">войдите в систему</a></p>
