--- a/Tasks/templates/kalendar/login.html
+++ b/Tasks/templates/kalendar/login.html
@@ -1,16 +1,16 @@
 {% extends 'kalendar/menu.html' %}
-
+{% block title %}Авторизация{% endblock %}
 {% block body %}
 <div class="center">
 	<form method="post" class="card" novalidate>
-		{% csrf_token %}
-	  <h2 class="text-center">Вход в аккаунт</h2>
-	  {% for field in form %}
-			  {{ field.label_tag }} 
-			  {{ field }}
-			  {% if field.errors %}
-				  <small>{{ field.errors|striptags  }}</small> 
-			  {% endif %}
+	{% csrf_token %}
+		<h2 class="text-center">Вход в аккаунт</h2>
+		{% for field in form %}
+			{{ field.label_tag }} 
+				{{ field }}
+				{% if field.errors %}
+					<small>{{ field.errors|striptags  }}</small> 
+				{% endif %}
 	  {% endfor %}
 	  
 	  <input type="submit" value="Войти" class="btn btn-primary full-width">
