--- a/Tasks/templates/kalendar/password_reset_confirm.html
+++ b/Tasks/templates/kalendar/password_reset_confirm.html
@@ -1,5 +1,7 @@
 {% extends 'kalendar/menu.html' %}
-
+{% block title %}
+Пароль
+{% endblock %}
 {% block body %}
 <div class="center">
 	<form method="post" class="card">
