--- a/Tasks/templates/kalendar/reset_password_done.html
+++ b/Tasks/templates/kalendar/reset_password_done.html
@@ -1,5 +1,7 @@
 {% extends 'kalendar/menu.html' %}
-
+{% block title %}
+Пароль
+{% endblock %}
 {% block body %}
 <div class="center card">
 	<h2>Восстановление пароля</h2>
