--- a/Tasks/templates/kalendar/task-edit.html
+++ b/Tasks/templates/kalendar/task-edit.html
@@ -2,26 +2,19 @@
 
 {% block CSS %}{% endblock %}
 {% block title %}
-Планер
+Изменение задачи
 {% endblock %}
 
-
-
 {% block body %}
-<h1>My tasks</h1>
 {%if request.user.is_authenticated %}
 <div>
-    
-    <h2>{% if id %} Редактировать {% else %} Создать {% endif %} задачу</h2>
+    <h2>Редактировать задачу</h2>
     <form method="post" novalidate enctype="multipart/form-data">
       {% csrf_token %}
-        <p>{{ form.tag.label_tag }} {{ form.tag }}<br>
-            {{ form.to_date.label_tag }} {{ form.to_date }}<br>
-            {{ form.text.label_tag }} {{ form.text }}<br>
-            {%if task.img%}
-            <img style="width: 100px; height: 100px;"src="{{task.img.url}}" class="img" accept=".jpg,.jpeg,.png"/>
-            </p>{%endif%}
-            <p>{{form.img}}<br></p>
+        <p>Задача{{ form.tag }}<br>
+            Закончить к {{ form.to_date }}<br>
+            Дополнительное описание {{ form.text }}<br>
+            Изменить или добавить фото {{form.img}}<br></p>
         <input type="submit" value="Обновить" />
     </form>
 </div>
