--- a/static/css/standart.css
+++ b/static/css/standart.css
@@ -91,3 +91,9 @@ h1, h2, h3, h4, h5, a{
   border-radius: 4px;
   box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.4);
 }
+
+form>p>input{
+  border: none;
+  font-size: 17px;
+  border-bottom: 2px solid rgba(0,0,0, 0.12);
+}
