--- a/Tasks/templates/kalendar/password_reset_complete.html
+++ b/Tasks/templates/kalendar/password_reset_complete.html
@@ -2,6 +2,12 @@
 {% block title %}
 Пароль
 {% endblock %}
+
+{% load static %}
+{% block CSS %}
+{% static "css/forms.css" %}
+{% endblock %}
+
 {% block body %}
 <div class="card center">
 	<p>Ваш пароль был успешно изменен. Пожалуйста <a href="{% url 'login' %}">войдите в систему</a></p>
