--- a/Tasks/templates/kalendar/password_reset_confirm.html
+++ b/Tasks/templates/kalendar/password_reset_confirm.html
@@ -2,25 +2,39 @@
 {% block title %}
 Пароль
 {% endblock %}
+
+{% load static %}
+{% block CSS %}
+{% static "css/forms.css" %}
+{% endblock %}
+
 {% block body %}
 <div class="center">
 	<form method="post" class="card">
 	  {% csrf_token %}
 	  <h2>Подтверждение сброса пароля</h2>
-	  
-	  {% for field in form %}
+	  <div class="box">
+	    {% for field in form %}
+			<div>
 	    		{{ field.label_tag }} 
 	        	{{ field }}
-	        	{% if field.errors %}
-	        		<small>{{ field.errors|striptags  }}</small> 
-	        	{% endif %}
+	        	<br>
+			</div>
 		{% endfor %}
-	  
-	  
+	  </div>
 	  <div>
-	    <button type="submit" class="btn btn-primary">Подтвердить</button>
+		<br>
+	    <button type="submit" class="btn btn-primary" style="background-color: white; padding:5px 15px 5px 15px; border-radius: 15px; 
+		border-color: white;border:none; font-family: 'Comfortaa';">Подтвердить</button>
 	  </div>
 	</form>
 </div>
+{% for field in form %}
+		{% if field.errors %}
+			{% for error in field.errors %}
+				<p style="font-size: 18px;"># {{ field.label_tag }} {{ error }}</p>
+			{% endfor %}
+		{% endif %}
+	{% endfor %}
 
 {% endblock body %}
