--- a/Tasks/templates/kalendar/password_reset_email.html
+++ b/Tasks/templates/kalendar/password_reset_email.html
@@ -5,14 +5,12 @@
 {% block body %}
 <p>Hi</p>
 
-<p>You're receiving this email because you requested a password reset for your user account at {{domain}}/</p>
+<p>Вы получаете это электронное письмо, потому что запросили сброс пароля для своей учетной записи пользователя по адресу {{домен}}/</p>
 
-<p>Please click the following link to reset your password:</p>
+<p>Пожалуйста, перейдите по следующей ссылке, чтобы сбросить свой пароль:</p>
 
 {{ protocol }}://{{ domain }}{% url "password_reset_confirm" uidb64=uid token=token %}
 
-<p>Thanks</p>
-<p>Todo App Team</p>
 
  	
 {% endblock body %}
