--- a/Tasks/templates/kalendar/password_reset.html
+++ b/Tasks/templates/kalendar/password_reset.html
@@ -3,6 +3,11 @@
 Пароль
 {% endblock %}
 
+{% load static %}
+{% block CSS %}
+{% static "css/forms.css" %}
+{% endblock %}
+
 {% block body %}
 <div class="center">
 	<form method="post" class="card">
@@ -11,13 +16,13 @@
 		{% for field in form %}
 	    		{{ field.label_tag }} 
 	        	{{ field }}
-	        	{% if field.errors %}
-	        		<small>{{ field.errors|striptags  }}</small> 
-	        	{% endif %}
 		{% endfor %}
-		<div class="form-buttons">
-			<input type="submit" value="Отправить" class="btn btn-primary">
-			<a href="{%url 'login' %}"  class="btn btn-outline">Отмена</a>
+		<br><br>
+		<div style="display: flex; justify-content: space-between;">
+			<input type="submit" value="Отправить" style="background-color: white; padding:5px 15px 5px 15px; border-radius: 15px; 
+			border-color: white;border:none; font-family: 'Comfortaa'; font-size: 16px;">
+			<a href="{%url 'login' %}"  style="background-color: white; font-size: 16px;padding:5px 15px 5px 15px; border-radius: 15px; 
+			border-color: white;border:none; font-family: 'Comfortaa'; text-decoration: none;">Отмена</a>
 		</div>
 	</form>
 </div>
